Resolve right space and horizontal scroll

--- a/_assets/styles/_common.scss
+++ b/_assets/styles/_common.scss
@@ -9,6 +9,11 @@ body {
   font-size: 100%;
   color: $text-color;
   background: white;
+  overflow-x: hidden;
+}
+
+main {
+  overflow-x: hidden;
 }
 
 .section {
